--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ai": "^4.3.16",
     "dotenv": "^16.5.0",
     "hono": "^4.7.11",
+    "openai": "^5.5.1",
     "zod": "^3.25.62"
   },
   "devDependencies": {
